welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: ')' expected but ';' found.
	(0,0);(0,1);(1;0);(0,2);(1;1);(2,0)
                      ^Diagonal:16: error: ';' expected but ')' found.
	(0,0);(0,1);(1;0);(0,2);(1;1);(2,0)
                        ^Diagonal:16: error: ';' expected but ')' found.
	(0,0);(0,1);(1;0);(0,2);(1;1);(2,0)
                                    ^